...
    <string name="search_notebook">Search this notebook</string>
    <string name="search_page_text">Page titles, chapters, text, and math</string>
    <string name="search_page_result">Page %1$d</string>
    <string name="no_search_results">No matching pages.</string>
    <string name="search_failed">Search failed. Try again.</string>
    <string name="close">Close</string>
    <string name="contents">Contents</string>
    <string name="insert">Insert</string>
    <string name="unfiled">Unfiled pages</string>
    <string name="add_chapter">Add chapter</string>
    <string name="rename_page">Rename page</string>
    <string name="move_to_chapter">Move to chapter</string>
    <string name="page_position">Page %1$d</string>
    <string name="page_of_pages">Page %1$d of %2$d</string>
    <string name="page_preview_description">Preview of page %1$d</string>
    <string name="imported_pdf_page">Imported PDF page %1$d</string>
    <string name="delete_chapter">Delete chapter?</string>
    <string name="delete_chapter_message">Pages in “%1$s” will move to Unfiled pages.</string>
    <string name="remove">Remove</string>
    <string name="bookmark_page">Bookmark page</string>
    <string name="remove_page_bookmark">Remove page bookmark</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="not_bookmarked">Not bookmarked</string>
    <string name="selection_state_selected">Selected</string>
    <string name="selection_state_not_selected">Not selected</string>
    <string name="tool_pen">Pen</string>
    <string name="tool_type">Type</string>
    <string name="tool_pencil">Pencil</string>
    <string name="tool_highlighter">Highlighter</string>
    <string name="tool_eraser">Eraser</string>
    <string name="eraser_segment">Segment</string>
    <string name="eraser_stroke">Whole stroke</string>
    <string name="tool_lasso">Lasso</string>
    <string name="selected_strokes">%1$d selected</string>
...
